# libazo

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: crc.rs  lib.rs  match_code.rs  model.rs  range.rs  recent.rs  table.rs  x86.rs
tests/: decode.rs  decompress.rs
tests/data/: README.md
